PharmaDemo/src/objects/Call_Summary_sigcap_WM__c.object
<CustomObject>
    <fields>
        <fullName>Accompanied_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanied Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adoption_1__c</fullName>
        <label>Adoption - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adoption_2__c</fullName>
        <label>Adoption - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adoption_3__c</fullName>
        <label>Adoption - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brick__c</fullName>
        <formula>Location__r.Brick__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrickId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>R00Nj0000003oDOxEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Summaries (Contact - 2)</relationshipLabel>
        <relationshipName>R00Nj0000003oDOyEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact - 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Summaries (Contact - 3)</relationshipLabel>
        <relationshipName>R00Nj0000003oDOzEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (mins)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number_1__c</fullName>
        <label>Lot Number - 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number_2__c</fullName>
        <label>Lot Number - 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number_3__c</fullName>
        <label>Lot Number - 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Discuss Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Actual_Attendees__c</fullName>
        <label># Actual Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Planned_Attendees__c</fullName>
        <label># Planned Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product - 1</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product - 2</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Call Summaries (Product - 2)</relationshipLabel>
        <relationshipName>Call_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product - 3</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Call Summaries (Product - 3)</relationshipLabel>
        <relationshipName>Call_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Quantity_1__c</fullName>
        <label>Promo Quantity - 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Quantity_2__c</fullName>
        <label>Promo Quantity - 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Quantity_3__c</fullName>
        <label>Promo Quantity - 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Product - 1</label>
        <referenceTo>Promotional_Product__c</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Product - 2</label>
        <referenceTo>Promotional_Product__c</referenceTo>
        <relationshipLabel>Call Summaries (Promotional Product - 2)</relationshipLabel>
        <relationshipName>Call_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotional Product - 3</label>
        <referenceTo>Promotional_Product__c</referenceTo>
        <relationshipLabel>Call Summaries (Promotional Product - 3)</relationshipLabel>
        <relationshipName>Call_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_Cost_1__c</fullName>
        <formula>Promotional_Product_1__r.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotional Product Cost - 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_Cost_2__c</fullName>
        <formula>Promotional_Product_2__r.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotional Product Cost - 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotional_Product_Cost_3__c</fullName>
        <formula>Promotional_Product_3__r.Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotional Product Cost - 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sample_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample - 1</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Call Summaries</relationshipLabel>
        <relationshipName>Call_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample - 2</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Call Summaries (Sample - 2)</relationshipLabel>
        <relationshipName>Call_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample - 3</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Call Summaries (Sample - 3)</relationshipLabel>
        <relationshipName>Call_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity_1__c</fullName>
        <label>Sample Quantity - 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity_2__c</fullName>
        <label>Sample Quantity - 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity_3__c</fullName>
        <label>Sample Quantity - 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_1__c</fullName>
        <label>Status - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_2__c</fullName>
        <label>Status - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_3__c</fullName>
        <label>Status - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Call Summary No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>